[tool.poetry]
name = "project-cpmtools"
version = "0.1.0"
description = ""
authors = ["SleepyCelery <chaoyihu@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fire = "^0.6.0"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

